--- a/calculator.html
+++ b/calculator.html
@@ -16,14 +16,14 @@
       <div class="buttons">
         <button class="dark" onclick="appendToDisplay('(')">(</button>
         <button class="dark" onclick="appendToDisplay(')')">)</button>
-        <button class="dark" onclick="calculate()">ans</button>
-        <button class="dark" onclick="clearLastEntered()">del</button>
-        <button class="dark" onclick="clearResult()">clear</button>
+        <button class="dark" onclick="calculate()">ANS</button>
+        <button class="dark" onclick="clearLastEntered()">DEL</button>
+        <button class="dark" onclick="clearResult()">CLEAR</button>
         <button onclick="appendToDisplay('7')">7</button>
         <button onclick="appendToDisplay('8')">8</button>
         <button onclick="appendToDisplay('9')">9</button>
         <button class="dark" onclick="appendToDisplay('%')">%</button>
-        <button class="dark" onclick="appendSqrt()">√</button>
+        <button class="dark" onclick="appendToDisplay('√')">√</button>
         <button onclick="appendToDisplay('4')">4</button>
         <button onclick="appendToDisplay('5')">5</button>
         <button onclick="appendToDisplay('6')">6</button>
@@ -41,7 +41,7 @@
       </div>
     </div>
     <br />
-    <p style="text-align: center;"><strong>Note :</strong> Make sure that while using square root you will add ")" after entering the value.</p>
+    <p style="text-align: center; color:antiquewhite ;"><strong>Note :</strong> Make sure that while using square root you will add ")" after entering the value.</p>
     
     <script src="calculator.js"></script>
   </body>
